--- a/ImpactGenCanary/app/src/main/res/layout/activity_splash.xml
+++ b/ImpactGenCanary/app/src/main/res/layout/activity_splash.xml
@@ -24,6 +24,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +47,7 @@
             android:textSize="14sp" />
 
         <TextView
-            android:layout_width="250dp"
+            android:layout_width="225dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
@@ -57,10 +58,10 @@
             android:textStyle="italic" />
 
         <TextView
-            android:textColor="#A1FFFFFF"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"
             android:text="Ke Halaman selanjutnya"
-            android:drawableEnd="@drawable/ic_baseline_navigate_next_24"/>
+            android:textColor="#A1FFFFFF" />
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
